--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,42 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.app {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: center;
+  padding: 3rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#editor {
+  background-color: whitesmoke;
+  border: black 2px solid;
+  border-radius: 0.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 30vh;
+  padding: 1rem;
+  resize: none;
+  width: 60vh;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#preview {
+  background-color: whitesmoke;
+  border: black 2px solid;
+  border-radius: 0.5rem;
+  color: whitesmoke;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 30vh;
+  padding: 1rem;
+  width: 60vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.titilo {
+  color: whitesmoke;
+  font-family: 'Nunito', sans-serif;
+  font-size: 3rem;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.titilo-subtitulo {
+  color: whitesmoke;
+  font-family: 'Nunito', sans-serif;
+  font-size: 2rem;
 }
